update added blur

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="logocontainer">
-            <H2 class="logo">Ae/Ahmedelgezawy</H2>
+            <H2 class="logo">PIXELhub</H2>
         </div>
         <div class="ulcontainer">
             <ul class="hdrcont">
@@ -35,6 +35,9 @@
             <i class="fab fa-discord"></i>
             <i class="fab fa-youtube"></i>
         </div>
+    </div>
+    <div class="features">
+
     </div>
     
     
