--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="spc1"></div>
             <div class="fcont">
                 <div class="fchp">
-                    <h2>THE LARGEST PIXELART<br>IN THE WORLD</h2>
+                    <h2>THE LARGEST PIXELART<br>LIBRARY IN THE WORLD</h2>
                     <P>Lorem, ipsum dolor sit amet consectetur adipisicinguae quibusdam, quod.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor magni ab quae quibusdam, quod.</P>
                 </div>
             </div>
