--- a/index.html
+++ b/index.html
@@ -50,15 +50,26 @@
         </div>
         
     </div>
+    <div class="ed1"></div>
     <div class="download">
-        <div class="windows">
-
+        <div class="dw">
+            <div class="dwc">
+                <h3>Download for windows</h3>
+                <button class="wdb">login</button>
+            </div>
         </div>
-        <div class="linux">
-
+        <div class="dm">
+            <div class="dmc">
+                <h3>Download for mac</h3>
+                <button class="mdb">login</button>
+            </div>
         </div>
-        <div class="mac">
-
+        <div class="dl">
+            <div class="dlc">
+                <h3>Download for linux</h3>
+                <button class="ldb">login</button>
+            </div>
+        </div>
         </div>
     </div>
     
