--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         <div class="dw">
             <div class="dwc">
                 <h3>Download for windows</h3>
-                <button class="wdb">login</button>
+                <button class="wdb">Download</button>
             </div>
         </div>
         <div class="dm">
             <div class="dmc">
                 <h3>Download for mac</h3>
-                <button class="mdb">login</button>
+                <button class="mdb">Download</button>
             </div>
         </div>
         <div class="dl">
             <div class="dlc">
                 <h3>Download for linux</h3>
-                <button class="ldb">login</button>
+                <button class="ldb">Download</button>
             </div>
         </div>
         </div>
