--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <i class="fab fa-youtube"></i>
         </div>
     </div>
+    <div class="ed1"></div>
     <div class="features">
         <div class="featurescontainer">
             <div class="sword">
